@@ -362,6 +362,16 @@ public class TestDocSet extends LuceneTestCase {
       }
 
       @Override
+      public void addCoreClosedListener(CoreClosedListener listener) {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public void removeCoreClosedListener(CoreClosedListener listener) {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
       public FieldInfos getFieldInfos() {
         return new FieldInfos(new FieldInfo[0]);
       }
